--- a/composer.json
+++ b/composer.json
@@ -17,28 +17,22 @@
   ],
   "require": {
     "php": "^8.3",
-    "symfony/psr-http-message-bridge": "^7.1.1",
-    "nyholm/psr7": "^1.8.1",
+    "symfony/psr-http-message-bridge": "^7.2.0",
+    "nyholm/psr7": "^1.8.2",
     "league/oauth2-server": "^9.0.0",
-    "illuminate/auth": "^11.0",
-    "illuminate/contracts": "^11.0",
-    "illuminate/container": "^11.0",
-    "illuminate/http": "^11.0",
-    "illuminate/support": "^11.0",
-    "illuminate/config": "^11.0"
+    "illuminate/auth": "^11.0 || ^12.0",
+    "illuminate/contracts": "^11.0 || ^12.0",
+    "illuminate/container": "^11.0 || ^12.0",
+    "illuminate/http": "^11.0 || ^12.0",
+    "illuminate/support": "^11.0 || ^12.0",
+    "illuminate/config": "^11.0 || ^12.0"
   },
   "require-dev": {
-    "pestphp/pest": "^v2.34.8",
-    "laravel/pint": "^v1.16.1"
+    "laravel/pint": "^v1.21.0"
   },
   "autoload": {
     "psr-4": {
       "XCoorp\\PassportControl\\": "src"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "XCoorp\\PassportControl\\Tests\\": "tests"
     }
   },
   "config": {
@@ -49,12 +43,7 @@
   },
   "scripts": {
     "lint": "pint -v",
-    "test:lint": "pint --test -v",
-    "test:coverage": "pest --coverage --min=100 --colors=always",
-    "test:unit": "pest --colors=always",
-    "test": [
-      "@test:unit"
-    ]
+    "test:lint": "pint --test -v"
   },
   "extra": {
     "laravel": {
