--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,jetbrains+all,visualstudiocode,laravel,composer
+
+**/.claude/settings.local.json
