--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "^8.3",
+    "php": "^8.3 || ^8.4",
     "symfony/psr-http-message-bridge": "^7.2.0",
     "nyholm/psr7": "^1.8.2",
     "league/oauth2-server": "^9.0.0",
